# kampany-szavazas

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  dl.sh  docker-compose.yml  tailwind.css  tw.sh
.cargo/: config.toml
.github/workflows/: docker-publish.yml  rust-clippy.yml
src/: auth.rs  main.rs  templates.rs
templates/: admin.html  base.html  index.html  login.html  me.html  sortable.html  vote.html
templates/admin/: admin.html  points.html  results.html
templates/vote/: closed.html  done.html  prohibited.html  sortable.html  tab.html  vbase.html
