[package]
name = "kampany_szavazas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["form", "cookie"] }
bincode = "1.3.3"
chrono = "0.4.37"
dotenvy = "0.15.7"
env_logger = "0.11.3"
envy = "0.4.2"
humantime-serde = "1.1.1"
itertools = "0.12.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
log = "0.4.21"
recap = "0.1.2"
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "http2", "charset", "json"] }
ring = "0.17.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sled = "0.34.7"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["set-header", "fs"] }

# https://djc.github.io/askama/performance.html
[profile.dev.package.askama_derive]
opt-level = 3

[profile.release]
strip = true
lto = true
